Fixed statistics alignment

--- a/client-src/src/pages/counselor/home/home.scss
+++ b/client-src/src/pages/counselor/home/home.scss
@@ -14,4 +14,9 @@ page-counselor-home {
     .inq-stats{
         font-size: 3rem;
     }
+    .divider{
+        height: 47px;
+        margin: 0 5px;
+        border-left: 1px solid #ccc;
+    }
 }
